--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -16,7 +16,7 @@
        </h1>
     </header>
     <main>
-        <img src="/img/glasses.png" alt="glasses_and_keyboard">
+        <img src="img/glasses.png" alt="glasses_and_keyboard">
         <div class="text">
             <p class="fat">
                 Vulputate vitae pellentesque scelerisque luctus consequat mattis pellentesque dui odio. Interdum aenean sit malesuada ornare sed gravida rhoncus, congue. Purus auctor nullam diam quis est hendrerit ac euismod. 
