--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -16,7 +16,7 @@
        </h1>
     </header>
     <main>
-        <img class="image" src="img/glasses.png" alt="g">
+        <img class="image" src="img/glasses.png" alt="glasses">
         <div class="text">
             <p class="fat">
                 Vulputate vitae pellentesque scelerisque luctus consequat mattis pellentesque dui odio. Interdum aenean sit malesuada ornare sed gravida rhoncus, congue. Purus auctor nullam diam quis est hendrerit ac euismod. 
